<resources>
    <string name="app_name">Dr. Diary</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="app_logo">App logo</string>
    <string name="skip_now">skip now</string>
    <string name="title_my_day">My Day</string>
    <string name="title_manage_activities">Manage Activities</string>
    <string name="edit_history_item">Edit</string>
    <string name="backup_diary_data">Backup Diary data</string>
    <string name="restore_diary_data">Restore Diary data</string>
    <string name="error_backup_upload">Something went wrong. Upload failed.</string>
    <string name="success_backup_upload">Successfully backed up</string>
    <string name="success_backup_download">Successfully downloaded from backup</string>
    <string name="error_backup_download">Something went wrong. Download failed.</string>
    <string name="logout">Logout</string>
    <string name="please_backup">Please sign up to backup the Diary.</string>
    <string name="success_logged_out">You\'ve been logged out successfully</string>
    <string name="login">Login</string>
    <string name="title_history_activity">History</string>
    <string name="title_creator_activity">Activity Designer</string>
    <string name="title_stats_activity">Stats</string>
    <string name="message_leave_without_save">Do you want to leave without saving?</string>
    <string name="caption_activity_not_saved">Acivity is not saved</string>
    <string name="hint_your_email">Your email</string>
    <string name="hint_your_password">Your password</string>
    <string name="new_credentials_or_existing_account_message">Enter your new credentials or use an existing account</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_pa_email">Email of password is invalid.</string>
    <string name="short_password">Your password is too short, it needs to be at least 6 characters long.</string>
    <string name="new_account_or_incorrect_input">Would you like to create a new account? If you are not new, then your credentials were incorrect.</string>
    <string name="boarding_greetings">Hey there</string>
    <string name="success_signup_message">Thank you for signing up.</string>
    <string name="success_login_message">You\'ve been successfully logged in</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="activity_name">Activity name</string>
    <string name="extra_input">Value field</string>
    <string name="creator_new_activity_will_be_in_new_records">Activity will appear in all new records</string>
    <string name="creator_instructions">Rearrange, disable or create a new activity</string>
    <string name="changes_won_t_harm_your_old_entries">Changes won\'t harm your old entries ☺</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="choose_icon">Choose icon</string>
    <string name="activities_updated">Activities updated</string>
    <string name="activity_note_first_part">Take new\u0020</string>
    <string name="activity_note_second_part">\u0020note</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="sun">sun</string>
    <string name="pick_activity_image">Pick activity image</string>
    <string name="user">User</string>
    <string name="your_name">Your name</string>
    <string name="sync_automatically">Sync Automatically</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="other_settings">Other Settings</string>
    <string name="deleteHistoryPreference">Delete History</string>
    <string name="history_deleted">History was successfully deleted.</string>
    <string name="statistics">Statistics</string>
    <string name="choose_activity">Choose Activity</string>
    <string name="this_time_unit">This</string>
    <string name="last_time_unit">Last</string>
    <string name="month">month</string>
    <string name="week">week</string>
    <string name="select_time_unit">Select time unit</string>
    <string name="select_grouping_operation">Select grouping operation</string>
    <string name="overall_average">Overall average:</string>
    <string name="total_sum">Total sum:</string>
    <string name="average_each_week">average for each week</string>
    <string name="average_each_month">average for each month</string>
    <string name="sum_each_week">sum for each week</string>
    <string name="sum_each_month">sum for each month</string>
    <string name="entry_list">Entry list</string>
    <string name="no_entries">No entries.</string>
    <string name="show_only_filled_items">Show only filled activities</string>
    <string name="delete_history">Delete History</string>
    <string name="compact_ui">Compact UI</string>
    <string name="creator_instructions_caption">Check Value field in the Stats overview</string>
    <string name="create_account">Create Account</string>
    <string name="not_now">Not now</string>
    <string name="link_anonymous_account">Enter your new credentials</string>
    <string name="linkAccount">Create account</string>
    <string name="user_change_not_allowed">Used email differs to the stored one, you can\'t use another account with this app</string>
    <string name="insert_stored_credentials">Unlock your notes. Credentials must be the same as stored ones.</string>
    <string name="badges_info">Get more badges for 2+ days long strikes</string>
    <string name="create_own">I\'ll create my own</string>
    <string name="choose_selected">Choose selected</string>
    <string name="title_popular_activities">Popular Activities</string>
    <string name="choose_popular_subtitle">Choose activities you want to track, easy as ABC</string>
    <string name="choose_popular_caption">You can change it later, don\'t worry ☺</string>
    <string name="example_outcome">Outcome</string>
    <string name="example_calories">Calories</string>
    <string name="example_workout">Workout</string>
    <string name="example_note">Note</string>
    <string name="example_water">Water Intake</string>
    <string name="example_steps">Steps</string>
    <string name="example_weight">Weight</string>
    <string name="example_grateful">Grateful For</string>
    <string name="example_book">Book</string>
    <string name="example_movie">Movie</string>
    <string name="example_friends">Friends</string>
    <string name="example_practice">Practice</string>
    <string name="example_relax">Relax</string>
    <string name="example_date">Date</string>
    <string name="example_medicine">Medicine</string>
    <string name="example_party">Party</string>
    <string name="example_study">Study</string>
    <string name="example_shopping">Shopping</string>
    <string name="example_running">Running</string>
    <string name="example_breathing">Breathing 1m</string>
    <string name="example_diet">Diet</string>
    <string name="example_nojunk">No Junk</string>
    <string name="example_meditation">Meditation</string>
    <string name="example_heartpoints">Heart Points</string>
    <string name="example_moveminutes">Move Minutes</string>
    <string name="example_cycling">Cycling</string>
    <string name="description_activity_image">Activity</string>
    <string name="description_activity_label">Activity\'s extra label</string>
    <string name="description_tooltip_icon">Tooltip icon</string>
    <string name="reminder_preference_category">Reminder</string>
    <string name="reminderNotificationPreference">Reminder Notification</string>
    <string name="set_reminder_notification">Reminder Notification</string>
    <string name="reminder_notification_caption">Set a reminder to take a daily record</string>
    <string name="active_reminder_caption">Daily reminder at %1$dh %2$dm</string>
    <string name="close">Close</string>
    <string name="save">Save</string>
    <string name="no_active_reminder_set_time_first">No active reminder, set time first</string>
    <string name="channel_name">Dr. Diary reminder</string>
    <string name="channel_description">Reminder to take a daily record</string>
    <string name="reminder_title">It is time for your daily record</string>
    <string name="reminder_text">Do it right now, don\'t waste your precious time</string>

    <string-array name="input_fields">
        <item>None</item>
        <item>Text</item>
        <item>Number</item>
    </string-array>

</resources>
