<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/options_button"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/stats_button"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/statistics" />
    <item
        android:id="@+id/sync_button"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/backup_diary_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/download_button"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/restore_diary_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout_button"
        android:icon="@android:drawable/ic_secure"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>