<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/user">

        <EditTextPreference
            app:key="name"
            app:title="@string/your_name"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_settings">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_automatically" />
        <SwitchPreferenceCompat
            app:key="filled_items"
            app:title="Show only filled items" />
        <SwitchPreferenceCompat
            app:key="compact"
            app:title="Compact UI" />
        <Preference
            app:key="@string/deleteHistoryButton"
            app:title="Delete History" />

        <!--<ListPreference-->
        <!--app:defaultValue="reply"-->
        <!--app:entries="@array/reply_entries"-->
        <!--app:entryValues="@array/reply_values"-->
        <!--app:key="reply"-->
        <!--app:title="@string/reply_title"-->
        <!--app:useSimpleSummaryProvider="true" />-->
        <!--<SwitchPreferenceCompat-->
        <!--app:dependency="sync"-->
        <!--app:key="attachment"-->
        <!--app:summaryOff="@string/attachment_summary_off"-->
        <!--app:summaryOn="@string/attachment_summary_on"-->
        <!--app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
