<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="16dp"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="200dp"
                    android:layout_height="110dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="0dp"
                    android:contentDescription="@string/app_logo"
                    android:src="@drawable/ic_logo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/ivLogo"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/white">

                    <LinearLayout
                        android:id="@+id/llAuthBtns"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tilPassword"
                        android:layout_alignParentEnd="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/signInBtn"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_weight="0.5"
                            android:background="@drawable/button_background"
                            android:text="@string/sign_in"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textStyle="bold" />


                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/notNowBtn"
                            style="@style/Widget.MaterialComponents.Button.TextButton"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.5"
                            android:text="@string/not_now" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvSubtitle"
                        style="@style/TextAppearance.MaterialComponents.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvHeading"
                        android:layout_centerHorizontal="false"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/link_anonymous_account"
                        android:textColor="@color/primary_text" />

                    <TextView
                        android:id="@+id/tvHeading"
                        style="@style/TextAppearance.MaterialComponents.Headline3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="16dp"
                        android:text="@string/linkAccount"
                        android:textColor="@color/primary_text" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tilEmail"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/hint_your_password"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-8dp"
                            android:drawableEnd="@drawable/ic_lock_outline_black_24dp"
                            android:inputType="textPassword"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/hint_text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvSubtitle"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/hint_your_email"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="-8dp"
                            android:drawableEnd="@drawable/ic_mail_outline_black_24dp"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/primary_text"
                            android:textColorHint="@color/hint_text" />

                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>

            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <include layout="@layout/toolbar" />
    </RelativeLayout>
</ScrollView>