<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".stats.TrackItemStatsActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/statTemplateBadge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivTemplateStatImage"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="50dp" />

        <TextView
            android:id="@+id/tvTemplateStatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statTemplateBadge"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart"
                android:layout_width="match_parent"
                android:layout_height="150pt"
                android:layout_marginEnd="20dp" />

            <RelativeLayout
                android:id="@+id/rlStatSpinners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/barChart"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/rlUnitSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_time_unit" />

                    <Spinner
                        android:id="@+id/timeUnitSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp" />

                </RelativeLayout>


                <RelativeLayout
                    android:id="@+id/rlGroupByOperationSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rlUnitSpinner"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/select_grouping_operation" />

                    <Spinner
                        android:id="@+id/statGroupBySpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="10dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlHistoryItemHeader"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rlGroupByOperationSpinner">

                    <RelativeLayout
                        android:id="@+id/rlTotalSum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/total_sum" />

                        <TextView
                            android:id="@+id/tvStatSumNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="30dp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/rlTotalAverage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rlTotalSum"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/overall_average" />

                        <TextView
                            android:id="@+id/tvStatAverageNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="30dp" />
                    </RelativeLayout>

                </RelativeLayout>


            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrackItemStats"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rlStatSpinners" />


        </RelativeLayout>

    </ScrollView>
</RelativeLayout>